# veloc-heat-test

./: CMakeLists.txt  README.md  filter.py  heatdis.cfg  heatdis.hpp  heatdis.json  input.cfg  kokkos_heatdis_mem.cpp  resil_heatdis_mem.cpp  sample_batch_for_openmp_only.batch
cmake/Modules/: FindVeloC.cmake
example/ABFT3D/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/heatdis/: CMakeLists.txt  heatdis.cpp  heatdis.hpp  main.cpp  main_barebone.cpp  restart_main.cpp  veloc-main.cpp  veloc-synthesis-bench.cpp  veloc_main.cpp  veloc_restart.cpp
tpl/: CMakeLists.txt
